--- a/src/Client/View/Employee/EmployeeOverview/EmployeeOverviewView.fxml
+++ b/src/Client/View/Employee/EmployeeOverview/EmployeeOverviewView.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.ListView?>
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.View.Employee.EmployeeOverview.EmployeeOverviewViewController">
    <children>
       <Button fx:id="requestButton" layoutX="482.0" layoutY="100.0" mnemonicParsing="false" onAction="#onRequestButton" prefHeight="34.0" prefWidth="104.0" text="Select Request" />
