--- a/src/Client/View/Customer/LoanOverview/LoanOverviewView.fxml
+++ b/src/Client/View/Customer/LoanOverview/LoanOverviewView.fxml
@@ -1,5 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.MenuItem?>
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.View.Customer.LoanOverview.LoanOverviewViewController">
    <children>
       <Button fx:id="overviewButton" layoutX="206.0" layoutY="352.0" mnemonicParsing="false" onAction="#onOverviewButton" prefHeight="34.0" prefWidth="186.0" text="Overview" />
