--- a/src/Client/View/Customer/NewAccount/NewAccountView.fxml
+++ b/src/Client/View/Customer/NewAccount/NewAccountView.fxml
@@ -1,5 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.MenuItem?>
 <AnchorPane prefHeight="411.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.View.Customer.NewAccount.NewAccountViewController">
    <children>
       <Pane layoutX="32.0" layoutY="137.0" prefHeight="185.0" prefWidth="538.0" style="-fx-background-color: e2e2e2;">
