--- a/src/Client/View/Customer/Overview/OverviewView.fxml
+++ b/src/Client/View/Customer/Overview/OverviewView.fxml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ListView?>
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.View.Customer.Overview.OverviewViewController">
    <children>
       <Button fx:id="accountsButton" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#onAccountsButton" prefHeight="34.0" prefWidth="283.0" text="Accounts" />
