--- a/src/Client/View/Customer/Profile/ProfileView.fxml
+++ b/src/Client/View/Customer/Profile/ProfileView.fxml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.Button?>
 <AnchorPane prefHeight="445.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.View.Customer.Profile.ProfileViewController">
    <children>
       <Label fx:id="fullNameLabel" layoutX="152.0" layoutY="14.0" prefHeight="39.0" prefWidth="309.0" text="Bob Bobson">
