--- a/src/Client/View/Customer/ProfileInfo/ProfileInfoView.fxml
+++ b/src/Client/View/Customer/ProfileInfo/ProfileInfoView.fxml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.control.TextField?>
 <AnchorPane prefHeight="513.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.View.Customer.ProfileInfo.ProfileInfoViewController">
    <children>
       <Label layoutX="215.0" layoutY="14.0" text="Profile info">
