--- a/src/Client/View/Customer/Withdrawal/WithdrawalView.fxml
+++ b/src/Client/View/Customer/Withdrawal/WithdrawalView.fxml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.Button?>
 <AnchorPane prefHeight="546.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.View.Customer.Withdrawal.WithdrawalViewController">
    <children>
       <Label layoutX="190.0" layoutY="14.0" text="Deposit funds">
