--- a/src/Client/View/Employee/Request/RequestView.fxml
+++ b/src/Client/View/Employee/Request/RequestView.fxml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.Button?>
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.View.Employee.Request.RequestViewController">
    <children>
       <Label layoutX="18.0" layoutY="23.0" text="R.E.A.L. BANK">
